<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="operation">Operation</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="answer">Answer</string>
    <string name="clear">Clear</string>
    <string name="result">Result</string>
    <string name="toast">The result is: </string>
    <string name="clear_history">Clear History</string>
    
    <string name="title_activity_result">Result</string>
    <string name="goback">Go Back</string>
    
    <string name="toast_lost_data">Lost data: </string>
    
    <string name="ADD_TO_DB_KEY">com.example.calculator.ADD_TO_DB</string>
    <string name="DB_OPERATION">com.example.calculator.db_oper</string>
    
    <!-- Spinner values -->
    <string-array name="operations">
        <item>Add</item>
        <item>Subtract</item>
        <item>Multiply</item>
        <item>Divide</item>
    </string-array>

</resources>
